src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import-normalize;

@layer components {
  .text-gradient {
    @apply text-transparent bg-primary-gradient bg-clip-text;
  }
}

body {
  overflow-x: hidden;
  background-image: linear-gradient(
    to right,
    rgba(248, 250, 252, 0.6),
    rgba(0, 167, 225, 0.25)
  );
  background-image: linear-gradient(
    to left,
    rgba(115, 92, 221, 0.2),
    rgba(27, 82, 153, 0.4)
  );
  transition-property: color, background-color, border-color,
    text-decoration-color, fill, stroke !important;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
  transition-duration: 300ms !important;
}

.main-container {
  width: min(75rem, 100vw) !important;
}

html.lenis {
  height: auto;
}

.lenis.lenis-smooth {
  scroll-behavior: auto;
}

.lenis.lenis-smooth [data-lenis-prevent] {
  overscroll-behavior: contain;
}

.lenis.lenis-stopped {
  overflow: hidden;
}

.lenis.lenis-scrolling iframe {
  pointer-events: none;
}

